@@ -9,6 +9,7 @@
  **/
  
 $modx->regClientStartupScript($modx->config['manager_url'].'assets/modext/util/datetime.js');
+$modx->regClientStartupScript($miniShop->config['jsUrl'].'mgr/plugins/dragdropgrid.js');
 $modx->regClientStartupScript($miniShop->config['jsUrl'].'mgr/widgets/kits.grid.js');
 $modx->regClientStartupScript($miniShop->config['jsUrl'].'mgr/widgets/statuses.grid.js');
 $modx->regClientStartupScript($miniShop->config['jsUrl'].'mgr/widgets/payments.grid.js');
