@@ -113,4 +113,18 @@ class ModGoods extends xPDOSimpleObject {
 		return $arr;
 	}
 
+	function getGallery($sort = 'fileorder', $dir = 'ASC') {
+		$gid = $this->get('gid');
+
+		$q = $this->xpdo->newQuery('ModGallery', array('gid' => $gid, 'wid' => $_SESSION['minishop']['warehouse']));
+		$q->sortby($sort,$dir);
+		$files = $this->xpdo->getCollection('ModGallery', $q);
+		
+		$arr = array();
+		foreach ($files as $v) {
+			$arr[] = $v;
+		}
+		return $arr;
+	}
+
 }
